# hyperliquid-advanced-orders

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-06-29-001-feature-hyperliquid-advanced-orders-daemon-plan.md  2026-06-30-001-feat-trader-readiness-plan.md  2026-07-01-001-fix-mvp-live-readiness-plan.md
docs/runbooks/: trader-readiness.md
packaging/launchd/: com.hyperliquid-advanced-orders.plist
src/hl_advanced_orders/: __init__.py  audit.py  cli.py  daemon.py  hyperliquid_client.py  models.py  preflight.py  readiness.py  recovery.py  secrets.py  storage.py  submission.py  trailing.py
tests/: test_audit.py  test_cli.py  test_daemon.py  test_daemon_runner.py  test_docs_examples.py  test_hyperliquid_client.py  test_preflight.py  test_recovery.py  test_storage.py  test_submission.py  test_trailing.py
