[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperliquid-advanced-orders"
version = "0.1.0"
description = "Local Hyperliquid advanced order daemon with trailing-stop automation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "abdygaziev" }]
dependencies = [
  "hyperliquid-python-sdk>=0.24.0",
  "keyring>=25.0.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[project.scripts]
hl-advanced-orders = "hl_advanced_orders.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hl_advanced_orders"]

[tool.ruff]
line-length = 100
target-version = "py311"
